--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
     "react-resizable-panels": "^3.0.1",
+    "react-toastify": "^11.0.5",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwind-variants": "^1.0.0",
