--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^18.2.0",
+    "react-datepicker": "^8.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.56.2",
