--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.56.2",
+    "react-hot-toast": "^2.5.2",
     "react-resizable-panels": "^3.0.1",
     "react-toastify": "^11.0.5",
     "sonner": "^2.0.3",
