--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-resizable-panels": "^3.0.1",
     "react-toastify": "^11.0.5",
     "sonner": "^2.0.3",
+    "tailwindcss": "^3.3.0",
     "tailwind-merge": "^3.2.0",
     "tailwind-variants": "^1.0.0",
     "tw-animate-css": "^1.2.8",
@@ -46,7 +47,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/forms": "^0.5.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -55,7 +56,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.6",
     "typescript": "^5"
   }
 }
