--- a/package.json
+++ b/package.json
@@ -9,53 +9,52 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.0.1",
-    "@radix-ui/react-alert-dialog": "^1.1.11",
-    "@radix-ui/react-avatar": "^1.1.9",
-    "@radix-ui/react-checkbox": "^1.2.3",
-    "@radix-ui/react-dialog": "^1.1.13",
-    "@radix-ui/react-dropdown-menu": "^2.1.14",
-    "@radix-ui/react-hover-card": "^1.1.13",
-    "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.1.6",
-    "@radix-ui/react-separator": "^1.1.4",
-    "@radix-ui/react-slot": "^1.2.2",
-    "@radix-ui/react-tooltip": "^1.2.4",
-    "class-variance-authority": "^0.7.1",
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-hover-card": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "framer-motion": "^12.9.2",
-    "jotai": "^2.12.4",
-    "lucide-react": "^0.503.0",
-    "next": "15.3.1",
-    "next-themes": "^0.4.6",
-    "react": "^18.2.0",
-    "react-datepicker": "^8.3.0",
+    "framer-motion": "^11.3.28",
+    "jotai": "^2.9.3",
+    "lucide-react": "^0.441.0",
+    "next": "15.0.0-rc.0",
+    "next-themes": "^0.3.0",
+    "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.56.2",
-    "react-hot-toast": "^2.5.2",
-    "react-resizable-panels": "^3.0.1",
-    "react-toastify": "^11.0.5",
-    "sonner": "^2.0.3",
-    "tailwindcss": "^3.3.0",
-    "tailwind-merge": "^3.2.0",
-    "tailwind-variants": "^1.0.0",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.2",
+    "react-hot-toast": "^2.4.1",
+    "react-resizable-panels": "^2.0.22",
+    "react-toastify": "^10.0.5",
+    "sonner": "^1.5.0",
+    "tailwindcss": "^3.4.10",
+    "tailwind-merge": "^2.5.2",
+    "tailwind-variants": "^0.2.1",
     "tw-animate-css": "^1.2.8",
-    "uuid": "^11.1.0",
-    "zod": "^3.24.4"
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@eslint/eslintrc": "^3.1.0",
+    "@types/node": "^20.16.1",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/uuid": "^10.0.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.1",
-    "postcss": "^8.5.3",
-    "typescript": "^5"
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "15.0.0-rc.0",
+    "postcss": "^8.4.41",
+    "typescript": "^5.5.4"
   }
 }
